<resources>
    <string name="app_name">MDP6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="education">Education</string>
    <string name="work_experience">Work Experience</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="tools_and_frameworks">Tools and Frameworks</string>
    <string name="logout">Logout</string>
    <string name="enter_full_name_e_g_ali_ziwa">Enter full name e.g (Ali Ziwa)</string>
    <string name="create_account">Create account</string>
    <string name="no_account_register">No account? Register</string>
</resources>
