<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efebe9"
    tools:context=".ui.fragment.RegisterFrag">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:hint="@string/enter_email_or_username"
                android:layout_margin="8dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:background="@drawable/text_field_background"
                android:layout_height="40dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:hint="@string/enter_password"
                android:layout_margin="8dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:background="@drawable/text_field_background"
                android:layout_height="40dp"
                android:inputType="textPassword" />

            <Button
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login"/>
            <Button
                style="@style/Theme.ResumeBuilderMary.NoBackgroundButtonStyle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:textAllCaps="false"
                android:text="@string/no_account_register"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
