<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/name_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/card"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/profile_background"
                    android:layout_centerVertical = "true"
                    android:layout_centerHorizontal = "true"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="90dp"
                        app:cardCornerRadius="55dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_height="90dp">

                        <ImageView
                            android:id="@+id/profile_pic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/app_name"
                            android:padding="8dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/mary_dp" />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="Testing 123" />

                    <TextView
                        android:id="@+id/profession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textSize="18sp"
                        tools:text="Software Engineer" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/description_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/name_card"
            app:layout_constraintEnd_toEndOf="@id/name_card"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/name_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/description"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Language: Java, Kotlin \n Swift: Yes and No" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/tools_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/description_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tools_and_frameworks"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Language: Java, Kotlin \n Swift: Yes and No" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
